--- a/src/Zoya.Web/Shared/MainLayout.razor
+++ b/src/Zoya.Web/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
-﻿@inherits LayoutComponentBase
+@inherits LayoutComponentBase
 
-<PageTitle>Zoya.Web</PageTitle>
+<PageTitle>Zoya</PageTitle>
 
 <div class="page">
     <div class="sidebar">
