--- a/src/Zoya.Web/Pages/FetchData.razor
+++ b/src/Zoya.Web/Pages/FetchData.razor
@@ -1,16 +1,16 @@
-@page "/fetchdata"
+@page "/accounts"
 
-<PageTitle>Weather forecast</PageTitle>
+<PageTitle>Accounts</PageTitle>
 
+@using Avvr.Kappusta.Zoya.Application.Accounts.Responses
 @using Avvr.Kappusta.Zoya.Web.Data
-@using global::Zoya.Web.Data
-@inject WeatherForecastService ForecastService
+@inject AccountService AccountService
 
 <h1>Weather forecast</h1>
 
 <p>This component demonstrates fetching data from a service.</p>
 
-@if (forecasts == null)
+@if (accounts == null)
 {
     <p><em>Loading...</em></p>
 }
@@ -20,19 +20,19 @@ else
         <thead>
             <tr>
                 <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
+                <th>Name</th>
+                <th>Owner</th>
+                <th>Balance</th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var forecast in forecasts)
+            @foreach (var account in accounts)
             {
                 <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
+                    <td>@DateTime.Now.Date</td>
+                    <td>@account.Name</td>
+                    <td>Test</td>
+                    <td>1000</td>
                 </tr>
             }
         </tbody>
@@ -40,10 +40,10 @@ else
 }
 
 @code {
-    private WeatherForecast[]? forecasts;
+    private AccountResponse[]? accounts;
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
+        accounts = await AccountService.GetAccountsAsync();
     }
 }
