--- a/src/Zoya.Web/Shared/NavMenu.razor
+++ b/src/Zoya.Web/Shared/NavMenu.razor
@@ -15,7 +15,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
+            <NavLink class="nav-link" href="accounts">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Accounts
             </NavLink>
         </div>
