--- a/src/Zoya.Web.Admin/Pages/Error.cshtml
+++ b/src/Zoya.Web.Admin/Pages/Error.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Avvr.Kappusta.Zoya.Web.Pages.ErrorModel
+@model Avvr.Kappusta.Zoya.Web.Admin.Pages.ErrorModel
 
 <!DOCTYPE html>
 <html lang="en">
