--- a/src/Zoya.Web.Admin/Pages/_Host.cshtml
+++ b/src/Zoya.Web.Admin/Pages/_Host.cshtml
@@ -1,7 +1,6 @@
 @page "/"
-@using Avvr.Kappusta.Zoya.Web
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@namespace Zoya.Web.Pages
+@namespace Avvr.Kappusta.Zoya.Web.Admin.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "_Layout";
