--- a/src/Zoya.Web.Admin/_Imports.razor
+++ b/src/Zoya.Web.Admin/_Imports.razor
@@ -6,5 +6,4 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using Zoya.Web
-@using Zoya.Web.Shared
+@using Zoya.Web.Admin.Shared
