--- a/src/Zoya.Web.Admin/Pages/_Layout.cshtml
+++ b/src/Zoya.Web.Admin/Pages/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
-@namespace Zoya.Web.Admin.Pages
+@namespace Avvr.Kappusta.Zoya.Web.Admin.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
